a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Fan_Jin/invalidif.min
# This program is invalid as the predicate for conditional can only be of type int

var x: float;

if x then

endif

